--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -21,6 +21,7 @@ ul.social-buttons {
   margin-bottom: 0;
   li {
     a {
+      float: left;
       font-size: 20px;
       line-height: 50px;
       display: block;
