--- a/css/agency.css
+++ b/css/agency.css
@@ -107,6 +107,15 @@ img::-moz-selection {
   box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
 }
 
+@media (min-width: 400px) {
+  .headshot {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+  }
+}
+
 #mainNav {
   background-color: #212529;
 }
