--- a/css/agency.css
+++ b/css/agency.css
@@ -201,8 +201,10 @@ header.masthead .intro-text .intro-heading {
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
-.headshot {
-  padding-top: 100px;
+@media (min-width: 400px){
+  .headshot {
+    padding-top: 100px;
+  }
 }
 
 @media (min-width: 768px) {
