--- a/css/agency.css
+++ b/css/agency.css
@@ -202,7 +202,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 @media (min-width: 400px){
-  .headshot {
+  header.masthead .headshot {
     padding-top: 100px;
   }
 }
