--- a/css/agency.css
+++ b/css/agency.css
@@ -181,7 +181,6 @@ header.masthead {
 }
 
 header.masthead .intro-text {
-  padding-top: 150px;
   padding-bottom: 100px;
 }
 
@@ -203,7 +202,7 @@ header.masthead .intro-text .intro-heading {
 
 @media (min-width: 400px){
   header.masthead .headshot {
-    padding-top: 100px;
+    margin-top: 100px;
   }
 }
 
