--- a/css/agency.css
+++ b/css/agency.css
@@ -7,6 +7,7 @@
 body {
   overflow-x: hidden;
   font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  /* background-color: #212121; */
 }
 
 p {
@@ -36,7 +37,7 @@ h6 {
 }
 
 .page-section {
-  padding: 100px 0;
+  padding: 50px 0;
 }
 
 .page-section h2.section-heading {
@@ -181,8 +182,8 @@ header.masthead {
 }
 
 header.masthead .intro-text {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 header.masthead .intro-text .intro-lead-in {
