--- a/css/agency.css
+++ b/css/agency.css
@@ -108,6 +108,10 @@ img::-moz-selection {
   box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
 }
 
+.devicon {
+  font-size: 72px;
+}
+
 #mainNav {
   background-color: #212529;
 }
