--- a/css/agency.css
+++ b/css/agency.css
@@ -112,6 +112,10 @@ img::-moz-selection {
   font-size: 72px;
 }
 
+.devicon-atom-original {
+  font-size: 60px;
+}
+
 #mainNav {
   background-color: #212529;
 }
@@ -386,10 +390,6 @@ header.masthead .intro-text .intro-heading {
   /* IE 9 */
   transform: rotate(90deg);
   background-color: #212529;
-}
-
-.text-center {
-  text-align: center!important;
 }
 
 .timeline {
