replacing photos in agency.cs file

--- a/css/agency.css
+++ b/css/agency.css
@@ -178,7 +178,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/header-bg.jpg");
+  background-image: url("../img/shecking/wide-images/lines-of-code.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -390,7 +390,7 @@ header.masthead .intro-text .intro-heading {
 
 section#contact {
   background-color: #212529;
-  background-image: url("../img/map-image.png");
+  background-image: url("../img/shecking/wide-images/vertical-lines-of-code.jpg");
   background-repeat: no-repeat;
   background-position: center;
 }
