--- a/css/agency.css
+++ b/css/agency.css
@@ -37,7 +37,7 @@ h6 {
 
 .page-section {
   background-color: #212121 !important;
-  font: #fff !important;
+  color: #fff !important;
   padding: 50px 0;
 
 }
