--- a/css/agency.css
+++ b/css/agency.css
@@ -37,9 +37,8 @@ h6 {
 
 .page-section {
   background-color: #212121 !important;
-  color: #fff !important;
+  color: #fff;
   padding: 50px 0;
-
 }
 
 .page-section h2.section-heading {
@@ -239,8 +238,9 @@ header.masthead .intro-text .intro-heading {
 }
 
 #portfolio .portfolio-item {
+  border-radius: 15px;
   right: 0;
-  margin: 0 0 15px;
+  margin: 0 0 10px;
 }
 
 #portfolio .portfolio-item .portfolio-link {
@@ -295,6 +295,7 @@ header.masthead .intro-text .intro-heading {
 #portfolio .portfolio-item .portfolio-caption h4 {
   margin: 0;
   text-transform: none;
+  color: #212529;
 }
 
 #portfolio .portfolio-item .portfolio-caption p {
